Overflow bugfix on page heading

--- a/_sass/style.compiled.scss
+++ b/_sass/style.compiled.scss
@@ -2761,6 +2761,7 @@ a.text-danger:focus, a.text-danger:hover {
   background: transparent url("../images/bg_head.png") no-repeat left center;
   background-size: auto 100%;
   color: white;
+  overflow-x: hidden;
   padding-bottom: 3rem;
   padding-top: 4rem;
   position: relative;
