--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -127,6 +127,7 @@
   background: transparent url("../images/bg_head.png") no-repeat left center;
   background-size: auto 100%;
   color: white;
+  overflow-x: hidden;
   padding-bottom: 3rem;
   padding-top: 4rem;
   position: relative;
